--- a/DANI2/index.html
+++ b/DANI2/index.html
@@ -31,19 +31,17 @@
                 <a href="#contact" onclick="showContact()">Nu Quunnamaa</a>
             </nav>
         <div class="language-switcher">
-            <a href="index.html" title="Oromo">
-                    <img src="image/flag-oromo.jpg" alt="Oromo" />
-                </a>
-
-                <a href="ama.html" title="Amharic">
-                    <img src="image/flag-ethiopia.png" alt="Amharic" />
-                </a>
                 <a href="tigrigna.html" title="Tigrinya">
                     <img src="image/flag-tigrinya.png" alt="Tigrinya" />
                 </a>
-               
+                <a href="ama.html" title="Amharic">
+                    <img src="image/flag-ethiopia.png" alt="Amharic" />
+                </a>
                 <a href="english.html" title="English">
                     <img src="image/uk.png" alt="English" />
+                </a>
+                <a href="index.html" title="Oromo">
+                    <img src="image/flag-oromo.jpg" alt="Oromo" />
                 </a>
             </div>
 
@@ -521,7 +519,7 @@ fi hojii ejensii. Kanneen hunda irraa galii adda addaa arganna.
             <div class="contact-content">
                 <h2 class="contact-title">Customize Your Popo Live Template</h2>
                 <p class="amharic-text">Templaatii kana akka isinii sirreessinu kan barbaaddan yoo ta'e, waan isinirraa eegamu maqaa keessan, suuraa keessanii fi liinkii midiyaalee hawaasaa garaagaraa qofa. Akkaawuntii Telegram armaan gadii keessa galaa nu dubbisaa</p>
-                <a href="https://t.me/dani9340" class="telegram-contact-btn">Contact Us on Telegram</a>
+                <a href="https://t.me/messiamazing" class="telegram-contact-btn">Contact Us on Telegram</a>
             </div>
         </div>
     </section>
