--- a/DANI2/ama.html
+++ b/DANI2/ama.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="text">
                         <h2>ሰላም ኤጀንት መሰረት እባላለሁ</h2>
-                        <p>ፖፖ ላይቭ ላይ መስራት ከጀመርኩ 5 ወር  ሆኖኛል። በዚህም በወር ከ10,000  ብር በላይ እያገኘው ነው::</p>
+                        <p>ፖፖ ላይቭ ላይ መስራት ከጀመርኩ 5 ወር  ሆኖኛል። በዚህም በወር ከ 100ሺ ብር በላይ እያገኘው ነው::</p>
                     </div>
                 </div>
             </section>
